# PIM-Parsing

./: .gitignore  Cargo.toml  README.md  generated_code.cpp
evaluation/: main.py
examples/: VA.dspim  app.c  hello.dspim  kernel.c  output.cpp  params.h  task.c  test_dm.dspim
examples/RED/: kernel.c  red.dspim
examples/SCAN/: kernel.c  scan.dspim
examples/VA/: VA.dspim  kernel.c
src/: base_type.rs  base_type_pim.rs  code_gen.rs  dspim.lalrpop  main.rs  parser.rs  sem_type.rs  semantics_analysis.rs
src/code_gen/: host.rs  mod.rs  support.rs  type_code.rs
src/graph_cut/: mod.rs
target_code/VA/host/: app.c  tempCodeRunnerFile.c
